// Copyright (C) 2019 Storj Labs, Inc.
// See LICENSE for copying information.

syntax = "proto3";
option go_package = "pb";

package storj.libuplink;

message IDVersion {
    uint32 number = 1;
    uint64 new_private_key = 2;
}

message TLSConfig {
    bool skip_peer_ca_whitelist = 1;
    string peer_ca_whitelist_path = 2;
}

message UplinkConfig {
    TLSConfig tls = 1;
    IDVersion identity_version = 2;
    string peer_id_version = 3;
    int64 max_inline_size = 4;
    int64 max_memory = 5;
}

message ProjectOptions {
    bytes encryption_key = 1;
}

message EncryptionParameters {
    uint32 cipher_suite = 1;
    int32 block_size = 2;
}

message RedundancyScheme {
    uint32 algorithm = 1;
    int32 share_size = 2;
    int32 required_shares = 3;
    int32 optimal_shares = 4;
    int32 total_shares = 5;
}

message BucketConfig {
    uint32 path_cipher = 1;
    EncryptionParameters encryption_parameters = 2;
    RedundancyScheme redundancy_scheme = 3;
    int64 segment_size = 4;
}